infrastructure/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluteksbot
  namespace: bluteks
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bluteksbot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bluteksbot
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: gitea.ricardovz.com/ricardovz/com-ricardovz-bluteksbot:latest
          imagePullPolicy: Always
          name: bluteksbot
          ports:
            - containerPort: "8080"
              name: http
              protocol: TCP
