infrastructure/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluteksbot
  namespace: bluteks
spec:
  ports:
    - name: http
      port: "8080"
      targetPort: http
  selector:
    app.kubernetes.io/name: bluteksbot
